Frontend fixes (#429)
* fix decompile modal  codemirror height

* bump browserslist

* fix scrollbars

* remove storybook, update things

* fix editor styling

--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -140,11 +140,33 @@ body {
     overflow-x: hidden;
     user-select: none;
     position: relative;
+
+    scrollbar-color: #fff3 #fff1;
+    scrollbar-width: thin;
 }
 
 html,
 body {
     height: 100%;
+}
+
+::-webkit-scrollbar {
+    background-color: transparent;
+    width: 0.6rem;
+    height: 0.6rem;
+}
+
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-corner {
+    background-color: #fff1;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #fff3;
+}
+
+::-webkit-scrollbar-button {
+    display: none;
 }
 
 #__next {
@@ -173,7 +195,6 @@ main {
     z-index: 999;
 }
 
-div {
-    scrollbar-color: #fff3 transparent;
-    scrollbar-width: thin;
+.cm-editor {
+    user-select: initial;
 }
